[project]
name = ""
version = ""
description = ""
authors = [
    {name = "ZzzGin", email = "13491630+ZzzGin@users.noreply.github.com"},
]
dependencies = [
    "boto3>=1.24.36",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
